--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@tailwindui/vue": "^0.1.0-alpha.2",
     "core-js": "^3.8.3",
+    "leaflet": "^1.8.0",
     "tailwind": "^4.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
