--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@tailwindui/vue": "^0.1.0-alpha.2",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "leaflet": "^1.8.0",
     "tailwind": "^4.0.0",
